--- a/quickstart.mdx
+++ b/quickstart.mdx
@@ -1,80 +1,135 @@
 ---
 title: "Quickstart"
-description: "Start building awesome documentation in minutes"
+description: "Get started with the ShadowCorp SDK in minutes"
 ---
 
 ## Get started in three steps
 
-Get your documentation site running locally and make your first customization.
+Install the SDK, authenticate, and make your first API call.
 
-### Step 1: Set up your local environment
+### Step 1: Installation
+
+The ShadowCorp SDK is available on npm and works in both JavaScript and TypeScript projects.
+
+<Tip>Requires Node.js 18 or higher</Tip>
+
+<CodeGroup>
+```bash npm
+npm install shadowcorp
+```
+```bash yarn
+yarn add shadowcorp
+```
+```bash pnpm
+pnpm add shadowcorp
+```
+
+</CodeGroup>
+
+### Step 2: Authentication
+
+All requests (except /health and /) require an API key. Get your free API key at https://dashboard.shadowcorp.dev
 
 <AccordionGroup>
-  <Accordion icon="copy" title="Clone your docs locally">
-    During the onboarding process, you created a GitHub repository with your docs content if you didn't already have one. You can find a link to this repository in your [dashboard](https://dashboard.mintlify.com).
-    
-    To clone the repository locally so that you can make and preview changes to your docs, follow the [Cloning a repository](https://docs.github.com/en/repositories/creating-and-managing-repositories/cloning-a-repository) guide in the GitHub docs.
+
+  <Accordion title="Environment variable (recommended)">
+    Store your API key securely in an `.env` file:
+```env
+SHADOWCORP_API_KEY=your_api_key_here
+```
+
+The SDK will automatically read it from `process.env.SHADOWCORP_API_KEY`.
+
   </Accordion>
-  <Accordion icon="rectangle-terminal" title="Start the preview server">
-    1. Install the Mintlify CLI: `npm i -g mint`
-    2. Navigate to your docs directory and run: `mint dev`
-    3. Open `http://localhost:3000` to see your docs live!
-    
-    <Tip>Your preview updates automatically as you edit files.</Tip>
+
+  <Accordion title="Direct instantiation">
+    Pass the key directly when creating the client:
+```ts
+const sdk = new ShadowCorpSDK('your_api_key_here');
+```
+
   </Accordion>
+
 </AccordionGroup>
 
-### Step 2: Deploy your changes
+### Step 3: Make your first request
 
-<AccordionGroup>
-  <Accordion icon="github" title="Install our GitHub app">
-    Install the Mintlify GitHub app from your [dashboard](https://dashboard.mintlify.com/settings/organization/github-app).
-    
-    Our GitHub app automatically deploys your changes to your docs site, so you don't need to manage deployments yourself.
-</Accordion>
-<Accordion icon="palette" title="Update your site name and colors">
-    For a first change, let's update the name and colors of your docs site.
+<CodeGroup>
+```ts TypeScript
+import { ShadowCorpSDK } from 'shadowcorp';
 
-    1. Open `docs.json` in your editor.
-    2. Change the `"name"` field to your project name.
-    3. Update the `"colors"` to match your brand.
-    4. Save and see your changes instantly at `http://localhost:3000`.
+const sdk = new ShadowCorpSDK(process.env.SHADOWCORP_API_KEY || 'your_api_key_here');
 
-    <Tip>Try changing the primary color to see an immediate difference!</Tip>
-  </Accordion>
-</AccordionGroup>
+// Get network statistics
+const stats = await sdk.stats.getNetworkStats();
+console.log('Current block height:', stats.latest_block_height);
+console.log('Total transactions:', stats.total_transactions);
 
-### Step 3: Go live
+// Get full account data
+const account = await sdk.accounts.getFull('therealmagyar.near');
+console.log("Account balance:", BigInt(account.state.amount));
+console.log('Tokens owned:', account.tokens?.length ?? 0);
 
-<Accordion icon="rocket" title="Publish your docs">
-  1. Commit and push your changes.
-  2. Your docs will update and be live in moments!
-</Accordion>
+````
+```js JavaScript
+const { ShadowCorpSDK } = require('shadowcorp');
+
+const sdk = new ShadowCorpSDK(process.env.SHADOWCORP_API_KEY || 'your_api_key_here');
+
+// Get network statistics
+const stats = await sdk.stats.getNetworkStats();
+console.log('Current block height:', stats.latest_block_height);
+
+// Get a specific block
+const block = await sdk.blocks.getByHeight(178978873);
+console.log('Block hash:', block.hash);
+````
+
+</CodeGroup>
+
+<Note>
+  All methods return plain JSON objects. Errors are thrown as custom classes
+  (`AuthError`, `RateLimitError`, etc.) for easy handling.
+</Note>
 
 ## Next steps
 
-Now that you have your docs running, explore these key features:
+Now that you're up and running, explore the full API:
 
-<CardGroup cols={2}>
+<CardGroup>
 
-<Card title="Write Content" icon="pen-to-square" href="/essentials/markdown">
-  Learn MDX syntax and start writing your documentation.
+<Card title="Health & Stats" icon="heart-pulse" href="/api-reference/health">
+  Check API status and network overview
 </Card>
 
-<Card title="Customize style" icon="palette" href="/essentials/settings">
-  Make your docs match your brand perfectly.
+<Card title="Blocks & Transactions" icon="cubes" href="/api-reference/blocks">
+  Explore blocks, transactions, and batch lookups
 </Card>
 
-<Card title="Add code examples" icon="square-code" href="/essentials/code">
-  Include syntax-highlighted code blocks.
+<Card title="Accounts" icon="user" href="/api-reference/accounts">
+  Full account data including balance, tokens, NFTs, staking, and DeFi positions
 </Card>
 
-<Card title="API documentation" icon="code" href="/api-reference/introduction">
-  Auto-generate API docs from OpenAPI specs.
+<Card title="Tokens & NFTs" icon="gem" href="/api-reference/tokens">
+  Metadata, holders, and transfer history
+</Card>
+
+<Card
+  title="Validators & Alerts"
+  icon="shield"
+  href="/api-reference/validators"
+>
+  Validator info and anomaly detection
+</Card>
+
+<Card title="RPC & Graph" icon="database" href="/api-reference/rpc">
+  JSON-RPC proxy and read-only Cypher queries for advanced analytics
 </Card>
 
 </CardGroup>
 
 <Note>
-  **Need help?** See our [full documentation](https://mintlify.com/docs) or join our [community](https://mintlify.com/community).
+  **Need help?** Open an issue on
+  [GitHub](https://github.com/TheRealMagyar/shadowcorpsdk/issues) or contact
+  support at support@shadowcorp.dev
 </Note>
