--- a/index.mdx
+++ b/index.mdx
@@ -30,13 +30,13 @@ Perfect for: dApps, DeFi platforms, NFT marketplaces, games.
 
 ### ShadowCorp SDK Documentation
 - [Installation](/shadowcorp-sdk/installation) - Set up the SDK
-- [Health & Stats](/shadowcorp-sdk/health) - API status and network metrics
-- [Blocks & Transactions](/shadowcorp-sdk/blocks) - Query blockchain data
-- [Token Transfers](/shadowcorp-sdk/transfers) - Track FT/NFT movements
-- [Accounts](/shadowcorp-sdk/full-account-data) - Complete account profiles
-- [Validators](/shadowcorp-sdk/validators) - Staking information
-- [Graph Queries](/shadowcorp-sdk/graph) - Neo4j forensic analysis
-- [JSON-RPC](/shadowcorp-sdk/json-rpc) - Direct RPC access
+- [Health & Stats](/shadowcorp-sdk/references/health) - API status and network metrics
+- [Blocks & Transactions](/shadowcorp-sdk/references/blocks) - Query blockchain data
+- [Token Transfers](/shadowcorp-sdk/references/transfers) - Track FT/NFT movements
+- [Accounts](/shadowcorp-sdk/references/full-account-data) - Complete account profiles
+- [Validators](/shadowcorp-sdk/references/validators) - Staking information
+- [Graph Queries](/shadowcorp-sdk/references/graph) - Neo4j forensic analysis
+- [JSON-RPC](/shadowcorp-sdk/references/json-rpc) - Direct RPC access
 
 ### NearConnect Documentation
 - [Installation](/near-connect/installation) - Set up NearConnect
